--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="heading">
-        <img src="/Assets/Bf-logo-gb-nb.svg" >
+        <img src="Assets/Bf-logo-gb-nb.svg" >
 <h1>Colour Palette</h1>
         <div id="space"></div>
       <div class="operations">  
